--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ Tel: +91 481 2430349, 2436169, 2436170 <br>
 Email: mail@saintgits.org </i></center>
 <br><br></i>
 <h4 style="color:brown"><b>For Admission please contact:<br></h4></b>
-<b>Anju Anna Jacob<br></b>
+<b>Ms. Ansu Mariam Cherian<br></b>
 Admissions Officer<br>
-+91 9895903278, +91 8129702585<br>
++91 9961672222<br>
 <i>anjukakkad@saintgits.org<br><br></i>
 </div>
 <div class="topnav" style="background-color:blue">
