--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Email: mail@saintgits.org </i></center>
 <b>Ms. Ansu Mariam Cherian<br></b>
 Admissions Officer<br>
 +91 9961672222<br>
-<i>anjukakkad@saintgits.org<br><br></i>
+<i>ansu.mc@saintgits.org<br><br></i>
 </div>
 <div class="topnav" style="background-color:blue">
     <br><center><b style="color:snow">LEARN. GROW. EXCEL</center></b>
