--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <br><br>
 <p align="left">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2</p>
 <br><br>
-<div class="topnav" style="background-color=lightgreen"><b>Admissions Open</b><br><br>
+<div class="topnav" style="background-color:lightgreen"><b>Admissions Open</b><br><br>
     MCA | Integrated MCA<br><br>
    <button><a href="https://saintgits.org/mca-college/mca-admission/"> Apply Now</button>
 </div><br><br>
