--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <br><br>
 <p align="left">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2</p>
 <br><br>
-<div class="topnav" style="background-color:lightgreen"><b>Admissions Open</b><br><br>
+<div class="topnav" style="background-color:lightgreen" width="350" height="250"><br><b style="color:red">Admissions Open</b><br><br>
     MCA | Integrated MCA<br><br>
    <button><a href="https://saintgits.org/mca-college/mca-admission/"> Apply Now</button>
-</div><br><br>
+<br></div><br><br>
 <div class=" topnav" ; style="background-color:lightblue" ; align="left" width="500">
 <br><br><h4 style="color:black"><b><u>Quick Links</b></u></h4><br>
 <justify><i ><a href="https://saintgits.org/group-home/patron-saint-and-founding-entity/" style="color:blue"> Patron Saint & Founding Entity<br></a><br>
