--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
  <p align="justify">The Institute was founded by a group of well known academicians. They are pioneering educators, having unmatched experience in the field of education with a belief that the continuous search for knowledge is the sole path to success.<br><br> The primary focus of the institution is to expose the young minds to the world of technology, instilling in them confidence and fortitude to face new challenges that enable them to excel in their chosen fields. The college inculcates the development of all facets of the mind culminating in an intellectual and balanced personality. Our team of dedicated and caring faculty strives to widen the student’s horizon of learning thereby achieving excellent results for every student.
 <br><br>
-<p align="left">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2</p>
+<p align="left">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
 <div class="topnav" style="background-color:lightgreen" width="70" height="400"><br><center><b style="color:red">Admissions Open</b><br><br>
     MCA | Integrated MCA<br><br>
