--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <p align="left">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
 <div class="topnav" style="background-color:lightgreen" width="70" height="400"><br><center><b style="color:red"><h3>Admissions Open</h3></b><br><br>
-    <p1>MCA | Integrated MCA<br><br></p1>
-   <button><a href="https://saintgits.org/mca-college/mca-admission/"> Apply Now</button></center><br>
+    <h8>MCA | Integrated MCA<br><br></h8>
+   <h6><button><a href="https://saintgits.org/mca-college/mca-admission/"> Apply Now</button></center><br></h6>
 <br></div><br><br>
 <div class=" topnav" ; style="background-color:lightblue" ; align="left" width="500">
 <br><br><h4 style="color:black"><b><u>Quick Links</b></u></h4><br>
