--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <p align="left">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
 <div class="topnav" style="background-color:lightgreen" width="70" height="400"><br><center><b style="color:red"><h3>Admissions Open</h3></b><br>
-    <h8>MCA | Integrated MCA<br></h8>
+    <h9>MCA | Integrated MCA<br></h9><br>
    <b><a href="https://saintgits.org/mca-college/mca-admission/"> Apply Now>></center><br></b>
 <br></div><br><br>
 <div class=" topnav" ; style="background-color:lightblue" ; align="left" width="500">
