--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <br><br>
 <p align="left">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
-<div class="topnav" style="background-color:lightgreen" width="70" height="400"><br><center><b style="color:red"><h2>Admissions Open</h2></b><br>
+<div class="topnav" style="background-color:lightgreen" width="70" height="400"><br><center><b style="color:red"><h2 align="justify">Admissions Open</h2></b><br>
     <h4><i>MCA</i> |<i> Integrated MCA</i><br></h4><br
    <b><a href="https://saintgits.org/mca-college/mca-admission/"> Apply Now>></center><br></b>
 <br></div><br><br>
