--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <br><br>
 <div class="topnav" style="background-color:lightgrey" width="70" height="400"><br><center><b style="color:red"><h2>Admissions Open</h2></b><br>
     <h4><i>MCA</i> |<i> Integrated MCA</i><br></h4><br
-   <b><a href="https://saintgits.org/mca-college/mca-admission/"> Apply Now>></center><br></b>
+                                                                                                               <a href="https://saintgits.org/mca-college/mca-admission/"><b>Apply Now>></b></center><br>
 <br></div><br><br>
 <div class=" topnav" ; style="background-color:lightblue" ; align="left" width="500">
 <br><br><h4 style="color:black"><b><u>Quick Links</b></u></h4><br>
