--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
  <p align="justify">The Institute of Computer Application was founded by a group of well known academicians. They are pioneering educators, having unmatched experience in the field of education with a belief that the continuous search for knowledge is the sole path to success.<br><br> The primary focus of the institution is to expose the young minds to the world of technology, instilling in them confidence and fortitude to face new challenges that enable them to excel in their chosen fields. The college inculcates the development of all facets of the mind culminating in an intellectual and balanced personality. Our team of dedicated and caring faculty strives to widen the student’s horizon of learning thereby achieving excellent results for every student.
 <br><br>
 <p align="left">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
+<br>
+<center><h2 style="color:red">O u r  &nbsp; &nbsp; C o u r s e s</h2></center>
+<center><b>MCA</b></center><br>
+<justify>MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop better and faster applications. We promote a learning environment that welcomes and honours men and women from diverse cultures. We let them involve themselves in intellectual inquisitiveness, explore knowledge dimensions for future application in industry, business and life. </justify><br><br>
+<b>Eligibility:</b><i>&nbsp;&nbsp;BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree OR <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;B. Sc. / B. Com. / B. A.. graduate with Mathematics at 10+2 level or at Graduation Level  in the qualifying Examination.</i><br><br>
+<center><b>Integrated MCA</b></center><br>
+<justify>Integrated MCA is a five years programme, spanning ten semesters, approved by AICTE and affiliated to APJ Abdul Kalam Technological University, where students can be admitted to two years MCA course after three years of study of BCA course. Students are exposed to the various areas of computer applications and provide a sound practical skill which is required by leading IT companies.</justify>
 <br><br>
+<b>Eligibility:</b><i>   Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.<br><br>
+               <br>
 <div class="topnav" style="background-color:lightgrey" width="70" height="400"><br><center><b style="color:red"><h2>Admissions Open</h2></b><br>
     <h4><i>MCA</i> |<i> Integrated MCA</i><br></h4><br>                                                                                                            <b> <a href="https://saintgits.org/mca-college/mca-admission/">Apply Now>></center><br></b>
 <br></div><br><br>
