--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <center><b>Integrated MCA</b></center><br>
 <justify>Integrated MCA is a five years programme, spanning ten semesters, approved by AICTE and affiliated to APJ Abdul Kalam Technological University, where students can be admitted to two years MCA course after three years of study of BCA course. Students are exposed to the various areas of computer applications and provide a sound practical skill which is required by leading IT companies.</justify>
 <br><br>
-<b>Eligibility:</b><i>   Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.<br><br>
+<b>Eligibility:</b><i>   Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.</i><br><br>
                <br>
 <div class="topnav" style="background-color:lightgrey" width="70" height="400"><br><center><b style="color:red"><h2>Admissions Open</h2></b><br>
     <h4><i>MCA</i> |<i> Integrated MCA</i><br></h4><br>                                                                                                            <b> <a href="https://saintgits.org/mca-college/mca-admission/">Apply Now>></center><br></b>
