--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 </justify>
 <center><b><u>Quick Contact</b></u> <br><br>
 <b style="color:orangered">SAINTGITS GROUP OF INSTITUTIONS <br></b>
-<i style="color:green" >Kottukulam Hills, Pathamuttom <br>
-PO Kottayam, Pin-686532, Kerala <br>
+<i style="color:green" >Kottukulam Hills, Pathamuttom
+P.O  <br>Kottayam, Pin-686532, Kerala <br>
 Tel: +91 481 2430349, 2436169, 2436170 <br>
 Email: mail@saintgits.org </i></center>
 <br><br></i>
