--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
 
-  <title>&ensp;MCA Department Website-Learn,Grow,Excel </title>
+  <title>&ensp;MCA Department-Learn,Grow,Excel </title>
 <link rel="icon" href="https://i1.rgstatic.net/ii/institution.image/AS%3A267477987069997%401440783130064_l">
  </head>
 <body>
