--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <br><br>
 <b>Eligibility</b><br><br><i>   Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.</i><br><br>
                <br>
-<div class="topnav" style="background-color:lightgrey" width="70" height="400"><br><center><b style="color:red"><h2>Admissions Open</h2></b><br>
+<div class="topnav" style="background-color:lightgrey" width="70"><br><center><b style="color:red"><h2>Admissions Open</h2></b><br>
     <h4><i>MCA</i> |<i> Integrated MCA</i><br></h4><br>                                                                                                            
 <b> <a href="https://saintgits.org/mca-college/mca-admission/">Apply Now&gt;&gt;</a></b></center><br>
 <br></div><br><br>
