--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <center><h2 style="color:red">O u r  &nbsp; &nbsp; C o u r s e s</h2></center><br><br>
 <center><b style="color:blue">MCA</b></center><br>
 <justify>MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop better and faster applications. We promote a learning environment that welcomes and honours men and women from diverse cultures. We let them involve themselves in intellectual inquisitiveness, explore knowledge dimensions for future application in industry, business and life.</justify><br><br>
-<b>Eligibility</b><br><br><i>&nbsp;&nbsp;BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b>Eligibility</b><br><br><i>&nbsp;&nbsp;BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree <br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OR <br>
                              <br>&nbsp;&nbsp;&nbsp;&nbsp;B. Sc. / B. Com. / B. A.. graduate with Mathematics at 10+2 level or at Graduation Level  in the qualifying Examination.</i><br><br>
 <center><b style="color:blue">Integrated MCA</b></center><br>
