--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Admissions Officer<br>
 +91 9961672222<br>
 <i>ansu.mc@saintgits.org<br><br></i>
 </div>
-<div class="topnav" style="background-color:blue">
+<div class="topnav" style="background-color:dodgerblue">
     <br><center><b style="color:snow">LEARN. GROW. EXCEL</b></center>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  </div>
