--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <br>
 </p><p align="left">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br>
-  <center><h1 style="color:Brown">O u r  &nbsp; &nbsp; C o u r s e s</h1><b style="color:red">------------------<b style="color:blue">===============</b></b></center><br><br>
+  <center><h1 style="color:Brown">O u r  &nbsp; &nbsp; C o u r s e s</h1><b style="color:red">====================<b style="color:blue">================</b></b></center><br><br>
 <center><b style="color:blue">MCA</b></center><br>
 <justify>MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop better and faster applications. We promote a learning environment that welcomes and honours men and women from diverse cultures. We let them involve themselves in intellectual inquisitiveness, explore knowledge dimensions for future application in industry, business and life.</justify><br><br>
 <b>Eligibility</b><br><br><i>&nbsp;&nbsp;BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree <br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
