--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 <br><br>
 <b>Eligibility</b><br><br><i>   Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.</i><br><br>
                <br>
+<img src="https://saintgits.org/mca-college/counselling-division/" width="400">
+<br><br>
 <div class="topnav" style="background-color:lightgrey" width="70"><br><center><b style="color:red"><h1>A d m i s s i o n s &ensp; O p e n</h1></b><br>
     <h4>M C A&nbsp; |&nbsp;I n t e g r a t e d &nbsp;&nbsp;M C A<br></h4><br>                                                                                                            
 <b> <a href="https://saintgits.org/mca-college/mca-admission/" style="text-decoration:none">A p p l y&emsp;N o w >></a></b></center><br>
