--- a/index.html
+++ b/index.html
@@ -67,26 +67,26 @@
 <br><br><br><br>
   <div class="topnav" style="background-color:lightblue" align="left" width="500">
 <br><br><h4 style="color:black"><b><u>Quick Links</u></b></h4><br>
-</a><i><a href="https://saintgits.org/group-home/patron-saint-and-founding-entity/" style="color:blue"> Patron Saint &amp; Founding Entity<br></a><br>
-<a href="https://saintgits.org/group-home/saintgits-center-for-innovation-and-entrepreneurship/" style="color:blue"> Saintgits Centre for Innovation &amp; Entrepreneurship<br></a><br>
+</a><i><a href="https://saintgits.org/group-home/patron-saint-and-founding-entity/" style="color:blue;text-decoration:none;"> Patron Saint &amp; Founding Entity<br></a><br>
+<a href="https://saintgits.org/group-home/saintgits-center-for-innovation-and-entrepreneurship/" style="color:blue;text-decoration:none;"> Saintgits Centre for Innovation &amp; Entrepreneurship<br></a><br>
 
- <a href="https://saintgits.org/group-home/affiliations-and-accreditations/" style="color:blue">Affiliations &amp; Accreditations<br></a><br>
+ <a href="https://saintgits.org/group-home/affiliations-and-accreditations/" style="color:blue;text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
 
- <a href="https://saintgits.org/group-home/laurels/" style="color:blue">Saintgits Laurels <br></a><br>
+ <a href="https://saintgits.org/group-home/laurels/" style="color:blue;text-decoration:none;">Saintgits Laurels <br></a><br>
 
- <a href="https://saintgits.org/group-home/careers/" style="color:blue">Careers <br></a><br>
+ <a href="https://saintgits.org/group-home/careers/" style="color:blue;text-decoration:none;">Careers <br></a><br>
 
- <a href="https://grievanceredressal.saintgits.org/" style="color:blue">Feedback &amp; Grievance Redressal <br><br></a>
+ <a href="https://grievanceredressal.saintgits.org/" style="color:blue;text-decoration:none;">Feedback &amp; Grievance Redressal <br><br></a>
 
-<a href="https://saintgits.org/mandatory-disclosure/" style="color:blue"> Mandatory Disclosure <br></a><br>
+<a href="https://saintgits.org/mandatory-disclosure/" style="color:blue;text-decoration:none;"> Mandatory Disclosure <br></a><br>
 
- <a href="https://saintgits.org/group-home/anti-ragging-policy/" style="color:blue">Anti Ragging Policy <br></a><br>
+ <a href="https://saintgits.org/group-home/anti-ragging-policy/" style="color:blue;text-decoration:none;">Anti Ragging Policy <br></a><br>
 
- <a href="https://saintgits.org/group-home/discover-the-campus/" style="color:blue">Discover the Campus <br></a><br>
+ <a href="https://saintgits.org/group-home/discover-the-campus/" style="color:blue;text-decoration:none;">Discover the Campus <br></a><br>
 
- <a href="https://saintgits.org/fee-payment/" style="color:blue">Click Here for Fee Payment <br></a><br>
+ <a href="https://saintgits.org/fee-payment/" style="color:blue;text-decoration:none;">Click Here for Fee Payment <br></a><br>
 
-<a href="https://saintgits.org/group-home/downloads/" style="color:blue">Downloads </a><br><br><br>
+<a href="https://saintgits.org/group-home/downloads/" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
 
 <center><b><u>Quick Contact</u></b> <br><br>
 <b style="color:orangered">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
