--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
 
-  <title>&ensp;MCA Department-Learn,Grow,Excel </title>
+  <title>&ensp;Saintgits MCA Department Learn,Grow,Excel </title>
 <link rel="icon" href="https://pbs.twimg.com/profile_images/900359901943169024/nt-tHh48_400x400.jpg">
  </head>
 <body>
