--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 
 <a href="https://saintgits.org/group-home/downloads/" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
 
-<center><b><u>Quick Contact</u></b> <br><br>
+<left><b><u>Quick Contact</u></b> <br><br>
 <b style="color:orangered">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
 <i style="color:green">Kottukulam Hills, Pathamuttom <br>
 PO Kottayam, Pin-686532, Kerala <br>
 Tel: +91 481 2430349, 2436169, 2436170 <br>
-Email: mail@saintgits.org </i></center>
+Email: mail@saintgits.org </i></left>
 <br><br></i>
 <h4 style="color:brown"><b>For Admission please contact:<br></b></h4>
 <b>Ms. Ansu Mariam Cherian<br></b>
