--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 <left><b><u>Quick Contact</u></b> <br><br>
 <b style="color:orangered">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
-<i style="color:green">Kottukulam Hills, Pathamuttom <br>
-PO Kottayam, Pin-686532, Kerala <br>
+<i style="color:green">Kottukulam Hills, Pathamuttom 
+P O <br>Kottayam, Pin-686532, Kerala <br>
 Tel: +91 481 2430349, 2436169, 2436170 <br>
 Email: mail@saintgits.org </i></left>
 <br><br></i>
