--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
  <p align="justify">The Institute of Computer Application was founded by a group of well known academicians. They are pioneering educators, having unmatched experience in the field of education with a belief that the continuous search for knowledge is the sole path to success.<br><br> The primary focus of the institution is to expose the young minds to the world of technology, instilling in them confidence and fortitude to face new challenges that enable them to excel in their chosen fields. The college inculcates the development of all facets of the mind culminating in an intellectual and balanced personality. Our team of dedicated and caring faculty strives to widen the student’s horizon of learning thereby achieving excellent results for every student.
 <br>
 </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
-<br>
+<br><br>
+<center><img src="https://raw.githubusercontent.com/Prudhwi2002/saintgits/main/IMG_20220513_151240.jpg" width="900">
+<br><br></center>
   <center><h1 style="color:Brown">O u r  &nbsp; &nbsp; C o u r s e s</h1><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
 <center><b style="color:blue">MCA</b></center><br>
 <justify>MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop better and faster applications. We promote a learning environment that welcomes and honours men and women from diverse cultures. We let them involve themselves in intellectual inquisitiveness, explore knowledge dimensions for future application in industry, business and life.</justify><br><br>
