--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
  <a href="https://saintgits.org/group-home/affiliations-and-accreditations/" style="color:blue;text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
 
- <a href="https://saintgits.org/group-home/laurels/" style="color:blue;text-decoration:none;">Saintgits Laurels <br></a><br>
+ <a href="https://saintgits.org/mca-college/laurels/" style="color:blue;text-decoration:none;">Saintgits MCA Laurels <br></a><br>
 
  <a href="https://saintgits.org/group-home/careers/" style="color:blue;text-decoration:none;">Careers <br></a><br>
 
