--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <br>
 </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
-<center><img src="https://raw.githubusercontent.com/Prudhwi2002/Saintgits-MCA-College/main/IMG_20220513_151240.jpg" width="900">
+<center><img src="https://raw.githubusercontent.com/Prudhwi2002/Saintgits-MCA-College/main/IMG_20220513_151240.jpg" width="950">
 <br><br></center>
   <center><h1 style="color:Brown">O u r  &nbsp; &nbsp; C o u r s e s</h1><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
 <center><b style="color:blue">MCA</b></center><br>
@@ -69,28 +69,28 @@
 <br><br><br><br>
   <div class="topnav" style="background-color:lightblue" align="left" width="500">
 <br><br><h4 style="color:black"><b><u>Quick Links</u></b></h4><br>
-</a><i><a href="https://saintgits.org/group-home/patron-saint-and-founding-entity/" style="color:blue;text-decoration:none;"> Patron Saint &amp; Founding Entity<br></a><br>
-<a href="https://saintgits.org/group-home/saintgits-center-for-innovation-and-entrepreneurship/" style="color:blue;text-decoration:none;"> Saintgits Centre for Innovation &amp; Entrepreneurship<br></a><br>
+</a><i><a href="https://saintgits.org/group-home/patron-saint-and-founding-entity/" target="_blank"  style="color:blue;text-decoration:none;"> Patron Saint &amp; Founding Entity<br></a><br>
+<a href="https://saintgits.org/group-home/saintgits-center-for-innovation-and-entrepreneurship/" target="_blank" style="color:blue;text-decoration:none;"> Saintgits Centre for Innovation &amp; Entrepreneurship<br></a><br>
 
- <a href="https://saintgits.org/group-home/affiliations-and-accreditations/" style="color:blue;text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
+ <a href="https://saintgits.org/group-home/affiliations-and-accreditations/" target="_blank" style="color:blue;text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
 
- <a href="https://saintgits.org/mca-college/laurels/" style="color:blue;text-decoration:none;">Saintgits MCA Laurels <br></a><br>
+ <a href="https://saintgits.org/mca-college/laurels/" target="_blank" style="color:blue;text-decoration:none;">Saintgits MCA Laurels <br></a><br>
 
- <a href="https://saintgits.org/group-home/careers/" style="color:blue;text-decoration:none;">Careers <br></a><br>
+ <a href="https://saintgits.org/group-home/careers/" target="_blank" style="color:blue;text-decoration:none;">Careers <br></a><br>
 
-<a href="https://saintgits.org/mandatory-disclosure/" style="color:blue;text-decoration:none;"> Mandatory Disclosure <br></a><br>
+<a href="https://saintgits.org/mandatory-disclosure/" target="_blank" style="color:blue;text-decoration:none;"> Mandatory Disclosure <br></a><br>
 
- <a href="https://saintgits.org/group-home/anti-ragging-policy/" style="color:blue;text-decoration:none;">Anti Ragging Policy <br></a><br>
+ <a href="https://saintgits.org/group-home/anti-ragging-policy/" target="_blank" style="color:blue;text-decoration:none;">Anti Ragging Policy <br></a><br>
 
- <a href="https://saintgits.org/group-home/discover-the-campus/" style="color:blue;text-decoration:none;">Discover the Campus <br></a><br>
+ <a href="https://saintgits.org/group-home/discover-the-campus/" target="_blank" style="color:blue;text-decoration:none;">Discover the Campus <br></a><br>
 
- <a href="https://saintgits.org/fee-payment/" style="color:blue;text-decoration:none;">Click Here for Fee Payment <br></a><br>
+ <a href="https://saintgits.org/fee-payment/" target="_blank" style="color:blue;text-decoration:none;">Click Here for Fee Payment <br></a><br>
 
-<a href="https://saintgits.org/group-home/downloads/" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
+<a href="https://saintgits.org/group-home/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
 
 <left><b><u>Quick Contact</u></b> <br><br>
-<b style="color:orangered">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
-<i style="color:green">Kottukulam Hills, Pathamuttom 
+<b style="color:orangered" align="justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
+<i style="color:green" align="justify">Kottukulam Hills, Pathamuttom 
 P O <br>Kottayam, Pin-686532, Kerala <br>
 Tel: +91 481 2430349, 2436169, 2436170 <br>
 Email: mail@saintgits.org </i></left>
