--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br>
 <center><b><a href="https://saintgits.org/" target="_blank" style="color:snow;text-decoration:none;">Group Home</a>
 &nbsp;&nbsp;&nbsp;
-<a href="https://prudhwi2002.github.io/Saintgits-MCA-College/" style="color:snow;text-decoration:none;">Home</a>
+<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
 &nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/engineering-college/about-us/profile/" style="color:snow;text-decoration:none;" target="_blank">About us</a>
 &nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
 &nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/mca-admission-2/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
