--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
  <a href="https://saintgits.org/fee-payment/" target="_blank" style="color:blue;text-decoration:none;">Click Here for Fee Payment <br></a><br>
 
-<a href="https://saintgits.org/group-home/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
+<a href="https://saintgits.org/group-home/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br></i>
 
 <left><b><u>Quick Contact</u></b> <br><br>
 <b style="color:orangered" align="justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
