--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 &nbsp;&nbsp;<a href="https://saintgits.org/group-home/account-statements/" target="_blank" style="color:blue;text-decoration:none;">Account Statements<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/laurels/" target="_blank" style="color:blue;text-decoration:none;">Saintgits MCA College Laurels <br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/group-home/anti-ragging-policy/" target="_blank" style="color:blue;text-decoration:none;">Anti-Ragging Policy <br></a><br>
-&nbsp;&nbsp;<a href="https://saintgits.org/group-home/saintgits-center-for-innovation-and-entrepreneurship/" target="_blank" style="color:blue;text-decoration:none;"> Saintgits Center for Innovation and Entrepreneurship <br></a><br>
+&nbsp;&nbsp;<a href="https://saintgits.org/group-home/saintgits-center-for-innovation-and-entrepreneurship/" target="_blank" style="color:blue;text-decoration:none;">Saintgits Center for Innovation<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/infosys-campus-connect/" target="_blank" style="color:blue;text-decoration:none;">Infosys Campus Connect <br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/industry-institution-partnership/" target="_blank" style="color:blue;text-decoration:none;">Industry Institution Partnership<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" style="color:blue;text-decoration:none;">Click Here for Fee Payment <br></a><br>
