--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <div class="topnav" style="background-color:red" align="left" width="500">
 <br>
 <center><b><a href="https://saintgits.org/" target="_blank" style="color:snow;text-decoration:none;">Group Home</a>
-&nbsp;&nbsp;&nbsp;
-<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
+&nbsp;&nbsp;&nbsp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
 &nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/engineering-college/about-us/profile/" style="color:snow;text-decoration:none;" target="_blank">About us</a>
-&nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
 &nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/mca-admission-2/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
+&nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
+&nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
 &nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/placements/" style="color:snow;text-decoration:none;" target="_blank">Placements</a>
 &nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/faculty/master-of-computer-applications/" style="color:snow;text-decoration:none;" target="_blank">Faculty</a>
 &nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/group-home/hostels/" style="color:snow;text-decoration:none;" target="_blank">Hostels</a>
