--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <br>
 </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
-<center><img src="https://raw.githubusercontent.com/Prudhwi2002/Saintgits-MCA-College/main/IMG_20220513_151240.jpg" width="950">
+<center><img src="https://raw.githubusercontent.com/Saintgits-MCA/Saintgits-MCA.github.io/main/IMG_20220513_151240.jpg" width="950">
 <br><br></center>
   <center><h1 style="color:Brown">O u r  &nbsp; &nbsp; C o u r s e s</h1><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
 <center><b style="color:blue">MCA</b></center><br>
