--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 <center><img src="https://raw.githubusercontent.com/Saintgits-MCA/Saintgits-MCA.github.io/main/IMG_20220513_151240.jpg" width="950">
 <br><br></center>
   <center><h1 style="color:Brown">O u r  &nbsp; &nbsp; C o u r s e s</h1><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
-<center><b style="color:mediumseagreen">MCA</b></center><br>
+<center><b style="color:forestgreen">MCA</b></center><br>
 <p align="justify">MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop better and faster applications. We promote a learning environment that welcomes and honours men and women from diverse cultures. We let them involve themselves in intellectual inquisitiveness, explore knowledge dimensions for future application in industry, business and life.</p><br><br>
 <b><ol style="list-style-type:square">Eligibility</b><br><br><i>&nbsp;&nbsp;<li>BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree</li> <br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OR <br>
                              <br>&nbsp;&nbsp;&nbsp;&nbsp;<li>B. Sc. / B. Com. / B. A.. graduate with Mathematics at 10+2 level or at Graduation Level  in the qualifying Examination.</li></i><br><br></ol>
-<center><b style="color:mediumseagreen">Integrated MCA</b></center><br>
+<center><b style="color:forestgreen">Integrated MCA</b></center><br>
 <p align="justify">Integrated MCA is a five years programme, spanning ten semesters, approved by AICTE and affiliated to APJ Abdul Kalam Technological University, where students can be admitted to two years MCA course after three years of study of BCA course. Students are exposed to the various areas of computer applications and provide a sound practical skill which is required by leading IT companies.</p>
 <br><br>
 <b><ol style="list-style-type:square">Eligibility</b><br><br><i> <li>  Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.</i><br><br></li></ol>
