--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <center><marquee behavior="scroll" direction="left" scrollamount="20" width="900" height="70"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp;&emsp;&emsp;****</marquee></center>
 </div><br>
 <h1 style="color:brown" align="center"><b>Master Of Computer Applications Department</b></h1>
-<center><p style="color:red">===================<p1 style="color:blue">=====================</p1></p></center>
+<center><p style="color:red">============<p1 style="color:blue">=============</p1></p></center>
 
  <p align="justify">The Institute of Computer Application was founded by a group of well known academicians. They are pioneering educators, having unmatched experience in the field of education with a belief that the continuous search for knowledge is the sole path to success.<br><br> The primary focus of the institution is to expose the young minds to the world of technology, instilling in them confidence and fortitude to face new challenges that enable them to excel in their chosen fields. The college inculcates the development of all facets of the mind culminating in an intellectual and balanced personality. Our team of dedicated and caring faculty strives to widen the student’s horizon of learning thereby achieving excellent results for every student.
 <br>
