--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
 &nbsp;&nbsp;+91 9961672222<br>
 <i>&nbsp;&nbsp;ansu.mc@saintgits.org<br><br></i>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-<pre align="right" style="color:black;font-family:arial;">©Saintgits MCA Department</pre>
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+<i align="right" style="color:black;font-family:arial;">©Saintgits MCA Department</i>
 </div>
 <div class="topnav" style="background-color:rgb(32,79,179)">
     <br><center><b style="color:snow">LEARN. GROW. EXCEL</b></center>
