--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
 <i>&nbsp;&nbsp;ansu.mc@saintgits.org<br><br></i>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-<i align="right" style="color:black;font-family:arial;font-size:3.8">©Saintgits MCA Department</i>
+<i align="right" style="color:black;font-family:arial;font-size:3.8;">©Saintgits MCA Department</i>
 </div>
 <div class="topnav" style="background-color:rgb(32,79,179)">
     <br><center><b style="color:snow">LEARN. GROW. EXCEL</b></center>
