--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 &nbsp;&nbsp;<a href="https://saintgits.org/group-home/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
 
     <left><h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
-&nbsp;&nbsp;<b style="color:orangered" align="justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b><br>
+&nbsp;&nbsp;<b style="color:orangered;font-size:12" align="justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b><br>
 <i style="color:green" align="justify">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
 P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
 &nbsp;&nbsp;Tel: +91 481 2430349, 2436169, 2436170 <br>
