--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head>
+<html lang="en"><head>
 
   <title>&ensp;Saintgits MCA Department Learn,Grow,Excel </title>
 <link rel="icon" href="https://pbs.twimg.com/profile_images/900359901943169024/nt-tHh48_400x400.jpg">
