--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
 <b>&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
 &nbsp;&nbsp;Admissions Officer<br>
 &nbsp;&nbsp;+91 9961672222<br>
-<i>&nbsp;&nbsp;ansu.mc@saintgits.org<br><br></i>
+<i>&nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a><br><br></i>
 </div>
 <div class="topnav" style="background-color:rgb(32,79,179)">
     <br><center><b style="color:snow">LEARN. GROW. EXCEL</b></center>
