--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="initial-scale:1.0;maximum-scale:1.0">
  </head>
 <body>
-<img src="Header-Stickers5.jpg" width="424" height="125">
-<img src="Header-Stickers9.jpg" width="486" height="125" align="right">
+<img src="../images/Header-Stickers5.jpg" width="424" height="125">
+<img src="../images/Header-Stickers9.jpg" width="486" height="125" align="right">
 <div class="topnav" style="background-color:red" align="left" width="500">
 <br>
 <center><b><a href="https://saintgits.org/" target="_blank" style="color:snow;text-decoration:none;">Group Home</a>
