--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
 
   <title>&ensp;Saintgits MCA Department</title>
-<link rel="icon" href="https://pbs.twimg.com/profile_images/900359901943169024/nt-tHh48_400x400.jpg">
+<link rel="icon" href="../images/Logo.jpg">
 <meta http-equiv="cookie" content="useri8d=xyz; expires=none" />
 <meta name="viewport" content="initial-scale:1.0;maximum-scale:1.0">
  </head>
