--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <i style="color:green" align="justify">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
 P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
 &nbsp;&nbsp;Tel: +91 481 2430349, 2436169, 2436170 <br>
-&nbsp;&nbsp;Email: mail@saintgits.org </i></left>
+&nbsp;&nbsp;Email:<a href="mailto:mail@saintgits.org" style="color:green;text-decoration:none">mail@saintgits.org</a> </i></left>
 <br><br></i>
 <h4 style="color:brown"><b>&nbsp;&nbsp;For Admission please contact:<br></b></h4>
 <b>&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
