--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
   <title>&ensp;Saintgits MCA Department</title>
 <link rel="icon" href="../images/Logo.jpg">
+<meta name="viewport" content="initial-scale:3.0;maximum-scale:3.0">
  </head>
 <body>
 <img src="../images/Header-Stickers5.jpg" width="424" height="125">
