--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" href="../images/Logo.jpg">
 <meta name="viewport" content="initial-scale:3.0;maximum-scale:3.0">
  </head>
-<body>
+<body><font size="4.5">
 <img src="../images/Header-Stickers5.jpg" width="424" height="125">
 <img src="../images/Header-Stickers9.jpg" width="486" height="125" align="right">
 <div class="topnav" style="background-color:red;border:9px solid red;" align="left" width="500">
@@ -72,7 +72,7 @@
  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/EY.jpg" width="237" height="210">
  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.jpg" width="237" height="210">
 </marquee></div>
-<br><br><br><br>
+<br><br><br><br></font>
   <div class="topnav" style="background-color:lightblue;border:9px solid lightblue;" align="left" width="500">
 <br><h3 style="color:black"><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/about-us/profile/" target="_blank" style="color:blue;text-decoration:none;">About us<br></a><br>
