--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="initial-scale:3.0;maximum-scale:3.0">
  </head>
 <body><font size="4.8">
-<center><img src="../images/Header-Stickers5.jpg" width="424" height="125">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  <img src="../images/Header-Stickers9.jpg" width="486" height="125"></center>
+<img src="../images/Header-Stickers5.jpg" width="424" height="125">
+<img src="../images/Header-Stickers9.jpg" width="486" height="125" align="right">
 <div class="topnav" style="background-color:red;border:9px solid red;" align="left" width="500">
 <br>
 <center><b><a href="https://saintgits.org/"  style="color:snow;text-decoration:none;" target="_blank">Group Home</a>
