--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body><font size="4.8">
 <img src="../images/Header-Stickers5.jpg" width="424" height="125">
 <img src="../images/Header-Stickers9.jpg" width="486" height="125" align="right">
-<div class="topnav" style="background-color:red;border:9px solid red;width:960;height:50;" align="left">
+<div class="topnav" style="background-color:red;border:9px solid red;height:50;" align="left">
 <br>
 <center><b><a href="https://saintgits.org/"  style="color:snow;text-decoration:none;" target="_blank">Group Home</a>
 &nbsp;&nbsp;&nbsp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
