--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
   <title>&ensp;Saintgits MCA Department</title>
 <link rel="icon" href="../images/Logo.jpg">
-<meta name="viewport" content="width=device-width,initial-scale=3.0,maximum-scale=3.0,user-scalable=no">
-<meta name="mobile-web-capable" content="yes">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
  </head>
 <body><font size="4.8">
 <img src="../images/Header-Stickers5.jpg" width="424" height="125">
