--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
 
   <title>&ensp;Saintgits MCA Department</title>
-<link rel="icon" href="../images/Logo.jpg"><meta name="viewport" width="extend-to-zoom">
+<link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width=extend-to-zoom;zoom=1.0">
  </head>
 <body><font size="4.8">
 <img src="../images/Header-Stickers5.jpg" width="424" height="125">
