--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
 
   <title>&ensp;Saintgits MCA Department</title>
-<link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width=extend-to-zoom;zoom=1.0">
+<link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
  </head>
 <body><font size="4.5">
 <img src="../images/Header-Stickers5.jpg" width="424" height="125">
@@ -19,7 +19,7 @@
 </b></center>
 <br>
 </div>
-<center><a href="https://saintgits.org/mca-college/" target="_blank"><img src="../images/Admin-Block.jpg" width="900"></center></a>
+<center><img src="../images/Admin-Block.jpg" width="900"></center>
 <div class="topnav" style="background-color:lightgrey" width="200">
 <center><marquee behavior="scroll" direction="left" scrollamount="20" width="900" height="70"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp;&emsp;&emsp;****</marquee></center>
 </div><br>
