--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <br><br>
 <center><img src="IMG_20220513_151240.jpg" width="950">
 <br><br></center>
-  <center><h1 style="color:Brown">O u r  &nbsp; &nbsp; C o u r s e s</h1><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
+  <center><h2 style="color:Brown">O U R  &nbsp; &nbsp; C O U R S E S</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
 <center><b style="color:darkgreen">MCA</b></center><br>
 <p align="justify">MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop better and faster applications. We promote a learning environment that welcomes and honours men and women from diverse cultures. We let them involve themselves in intellectual inquisitiveness, explore knowledge dimensions for future application in industry, business and life.</p><br><br>
 <b><ul style="list-style-type:square">Eligibility</b><br><br><i>&nbsp;&nbsp;<li>BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree</li> <br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -46,7 +46,7 @@
 
 <div class="topnav" style="background-color:whitesmoke;font-family:arial;" width="70">
 <center><img src="../images/Campus-Life-4-768x189.jpg" width="947" height="337"></center><br>
-<center><b style="color:red"><h1>A D M I S S I O N S&emsp;O P E N</h1></b>
+<center><b style="color:red"><h2>A D M I S S I O N S&emsp;O P E N</h2></b>
     <h3>MCA&nbsp; |&nbsp;INTEGRATED &nbsp;&nbsp;MCA<br></h3>                                                                                                            
 <h3><a href="https://saintgits.org/mca-college/mca-admission/" style="text-decoration:none;font-family=arial;" target="_blank">Apply&ensp;Now>></a></h3></center><br>
 <br></div><br><br>
