--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <div class="topnav" style="background-color:red;border:9px solid red;height:50;" align="left">
 <br>
 <center style="font-size:19;"><b>
-&nbsp;&nbsp;&nbsp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
-&nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/engineering-college/about-us/profile/" style="color:snow;text-decoration:none;" target="_blank">About</a>
-&nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/mca-admission-2/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
-&nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
-&nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
-&nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/placements/" style="color:snow;text-decoration:none;" target="_blank">Placements</a>
-&nbsp;&nbsp;&nbsp;<a href="https://saintgits.org/mca-college/faculty/master-of-computer-applications/" style="color:snow;text-decoration:none;" target="_blank">Faculty</a>
+&emsp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
+&emsp;<a href="https://saintgits.org/engineering-college/about-us/profile/" style="color:snow;text-decoration:none;" target="_blank">About</a>
+&emsp;<a href="https://saintgits.org/mca-college/mca-admission-2/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
+&emsp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
+&emsp;<a href="https://saintgits.org/mca-college/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
+&emsp;<a href="https://saintgits.org/mca-college/placements/" style="color:snow;text-decoration:none;" target="_blank">Placements</a>
+&emsp;<a href="https://saintgits.org/mca-college/faculty/master-of-computer-applications/" style="color:snow;text-decoration:none;" target="_blank">Faculty</a>
 </b></center>
 <br>
 </div>
