--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <img src="../images/Header-Stickers9.jpg" width="486" height="125" align="right">
 <div class="topnav" style="background-color:red;border:9px solid red;height:50;" align="left">
 <br>
-<center style="font-size:19;"><b>
+<left style="font-size:19;"><b>
 &emsp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
 &emsp;<a href="https://saintgits.org/engineering-college/about-us/profile/" style="color:snow;text-decoration:none;" target="_blank">About</a>
 &emsp;<a href="https://saintgits.org/mca-college/mca-admission-2/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
@@ -16,7 +16,7 @@
 &emsp;<a href="https://saintgits.org/mca-college/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
 &emsp;<a href="https://saintgits.org/mca-college/placements/" style="color:snow;text-decoration:none;" target="_blank">Placements</a>
 &emsp;<a href="https://saintgits.org/mca-college/faculty/master-of-computer-applications/" style="color:snow;text-decoration:none;" target="_blank">Faculty</a>
-</b></center>
+</b></left>
 <br>
 </div>
 <center><img src="../images/Admin-Block.jpg" width="900"></center>
